refactoring the code