@@ -4,28 +4,22 @@ ThisBuild / scalaVersion     := scalaVer
 ThisBuild / version          := "0.1.0-SNAPSHOT"
 ThisBuild / organization     := "com.example"
 ThisBuild / organizationName := "example"
-// ThisBuild / javaHome         := Some(file("C:\\Program Files\\Java\\jdk-11.0.17"))
 
-// onLoadMessage := {
-//   s"Using Java Home: ${((ThisBuild / javaHome).value.map(_.getAbsolutePath)).getOrElse("Not Set")}"
-// } uncomment for windows
+// Uncomment and modify if needed for Windows
+// ThisBuild / javaHome := Some(file("C:\\Program Files\\Java\\jdk-11.0.17"))
 
 lazy val root = (project in file("."))
   .settings(
     name := "schemadiscovery",
+    
+    // Add library dependencies
     libraryDependencies ++= Seq(
-      munit % Test,
-      sparkCore,   
-      sparkSql,
-      mllib
-    ),
-    Compile / run / fork := true
+      munit % Test,          // Testing dependency
+      sparkCore,             // Spark Core
+      sparkSql,              // Spark SQL
+      mllib,                 // Spark MLlib
+      "org.neo4j.driver" % "neo4j-java-driver" % "4.4.10"    ),
 
-    // Set Java options for running applications
-    // fork in run := true,
-    // javaOptions in run ++= Seq(
-    //   "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-    //   "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-    //   "--illegal-access=warn" // This option will log rather than throw when illegal accesses occur
-    // ) uncomment for windows
+    // Ensure the application forks when running to use the Java options
+    Compile / run / fork := true
   )
